<resources>
    <string name="app_name">RumbaAndina</string>
    <string name="title_activity_iniciar_sesion">Iniciar_sesion</string>
    <string name="login">Iniciar sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="insert_password">Insertar contraseña</string>
    <string name="insert_username">Insertar el nombre de usuario</string>
    <string name="insert_usernamelogin">Insertar el correo electrónico</string>
    <string name="register_account">¿No tienes una cuenta?</string>
    <string name="question_register">¿Qué tipo de cuenta deseas crear?</string>
    <string name="register_client">Quiero salir de fiesta</string>
    <string name="register_club">Quiero registrar mi club</string>
    <string name="create_account">Crear cuenta</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="select_picture">Seleccionar foto de perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="birthday">Cumpleaños</string>
    <string name="identification_carnet">C.I.</string>
    <string name="insert_email">Insertar correo electrónico</string>
    <string name="insert_phonenumber">Insertar número de teléfono</string>
    <string name="insert_birthday">Insertar cumpleaños</string>
    <string name="insert_ci">Insertar carnet de identidad</string>
    <string name="logo">Logo*</string>
    <string name="select_logo">Seleccionar el logo</string>
    <string name="club_name">Nombre de discoteca*</string>
    <string name="insert_club_name">Insertar nombre de discoteca</string>
    <string name="owner_email">Correo electrónico*</string>
    <string name="insert_owner">Insertar el correo del dueño de discoteca</string>
    <string name="license">Licencia de funcionamiento*</string>
    <string name="insert_license">Insertar licencia de funcionamiento</string>
    <string name="description_club">Descripción</string>
    <string name="insert_description_club">Insertar la descripción</string>
    <string name="insert_location">Elegir ubicación</string>
    <string name="accept_location">Guardar la ubicacion</string>
    <string name="location">Ubicación*</string>
    <string name="schedule">Horario*</string>
    <string name="insert_schedule">Ingresa el horario</string>
    <string name="contactofclub">Contacto de la discoteca</string>
    <string name="insert_contacts">Ingresa a que número se pueden comunicar</string>
    <string name="recomendations">Recomendaciones</string>
    <string name="insert_recomendations">Insertar recomendaciones para tus clientes (Ej:horas de llegada para no hacer fila, etc.)</string>
    <string name="tags">Etiquetas</string>
    <string name="smoking_area">Área de fumadores</string>
    <string name="subject">Temática</string>
    <string name="non_alcohol_drinks">Bebidas sin alcohol</string>
    <string name="tables_reserved">Reserva de mesas</string>
    <string name="vip_area">Área VIP</string>
    <string name="invites_only">Solo con invitaciones</string>
    <string name="free">Ingreso gratis</string>
    <string name="cover">Cover</string>
    <string name="insert_cover">Inserta el cover de tu discoteca, en caso de no tenerlo dejalo en blanco</string>
    <string name="register_count">¿No tienes una cuenta?</string>
    <string name="search_title">Búsqueda</string>
    <string name="search_by_name_hint">Nombre de la discoteca</string>
    <string name="search_button">Buscar</string>
    <string name="filter_title">Filtros</string>
    <string name="search_by_zone_title">Zonas</string>
    <string name="dropdown_hint">Elige la zona</string>
    <string-array name="zones">
        <item>Sopocachi</item>
        <item>Centro</item>
        <item>Calacoto</item>
        <item>Cota Cota</item>
    </string-array>
    <string name="show_more">Ver más...</string>
    <string name="tag_smoking_area">Área de fumadores</string>
    <string name="tag_outdoor">Al aire Libre</string>
    <string name="tag_oldies">Clasicos</string>
    <string name="tag_live_music">Música en vivo</string>
    <string name="tag_tables">Mesas</string>
    <string name="tag_no_cover">No cover</string>
    <string name="recent_post_title">Novedades</string>
    <string name="most_liked_title">Más visitadas</string>
    <string name="maps_label">Mapa</string>
    <string name="information">Información</string>
    <string name="feed">Feed</string>
    <string name="schedule_club_profile">Horario</string>
    <string name="location_club_profile">Ubicación</string>
    <string name="title">Título</string>
    <string name="post">Publicar</string>
    <string name="cancel">Cancelar</string>
    <string name="map">Mapa</string>
    <string name="homescreen">Inicio</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="close_account">Cerrar Sesion</string>
    <string name="name_of_club_search">Nombre de discoteca</string>
    <string name="title_of_publication">Titulo de la publicacion</string>
    <string name="date">25 Oct 2023</string>
    <string name="description_example">¡Este sábado tenemos un line up imperdible! Prepara tu mejor disfraz para bailar por horas.\n</string>
    <string name="description_mandatory">Descripción*</string>
    <string name="phone_number_mandatory">Número de teléfono*</string>
    <string name="password_mandatory">Contraseña*</string>
    <string name="update_club">Guardar los cambios</string>
</resources>

