<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterClub">

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginStart="72dp"
        android:alpha="0.50"
        android:background="@color/fucsia"
        android:rotation="40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginEnd="72dp"
        android:alpha="0.50"
        android:background="@color/turquoise"
        android:rotation="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_account"
                android:theme="@style/TextViewHead" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingStart="40dp"
                    android:paddingEnd="10dp"
                    android:text="@string/logo"
                    android:theme="@style/TextViewSubtitle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:text="@string/select_picture"
                        android:theme="@style/TextViewButton"
                        android:visibility="gone" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select_logo"
                        android:theme="@style/TextViewButton" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/club_name"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@color/white"
                android:hint="@string/insert_club_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/owner_name"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@color/white"
                android:hint="@string/insert_owner"
                android:inputType="textPersonName"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/license"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="license"
                android:background="@color/white"
                android:hint="@string/insert_license"
                android:inputType="number"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/phone_number"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@color/white"
                android:hint="@string/insert_phonenumber"
                android:inputType="number"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description_club"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:autofillHints="description"
                android:background="@color/white"
                android:hint="@string/insert_description_club"
                android:inputType="text"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/location"
                android:theme="@style/TextViewSubtitle" />

            <View
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/schedule"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="time"
                android:background="@color/white"
                android:hint="@string/insert_schedule"
                android:inputType="time"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cover"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="price"
                android:background="@color/white"
                android:hint="@string/insert_cover"
                android:inputType="number"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/recomendations"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:autofillHints="description"
                android:background="@color/white"
                android:hint="@string/insert_recomendations"
                android:inputType="text"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/contactofclub"
                android:theme="@style/TextViewSubtitle" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@color/white"
                android:hint="@string/insert_contacts"
                android:inputType="number"
                android:textColorHint="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tags"
                android:theme="@style/TextViewSubtitle" />
            
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoking_area"
                android:theme="@style/TextViewDescription"
                android:textColor="@color/white"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:theme="@style/TextViewDescription"
                android:textColor="@color/white"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_alcohol_drinks"
                android:theme="@style/TextViewDescription"
                android:textColor="@color/white"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tables_reserved"
                android:theme="@style/TextViewDescription"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:text="@string/create_account"
                android:theme="@style/TextViewButton" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>