<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/title_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_of_publication"
        android:theme="@style/TextViewTitle"
        />
    <TextView
        android:id="@+id/date_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:theme="@style/TextViewDescription" />

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintDimensionRatio="1:2"
        android:src="@drawable/post_pacha_pachaween"
        />
    <TextView
        android:id="@+id/description_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_example"
        android:theme="@style/TextViewDescription"
        android:layout_marginBottom="10dp"/>

</LinearLayout>