<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginStart="88dp"
        android:alpha="0.50"
        android:background="@color/fucsia"
        android:rotation="40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginStart="8dp"
        android:alpha="0.50"
        android:background="@color/fucsia"
        android:rotation="40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginEnd="8dp"
        android:alpha="0.50"
        android:background="@color/purple"
        android:rotation="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="600sp"
        android:layout_height="200sp"
        android:layout_marginEnd="88dp"
        android:alpha="0.50"
        android:background="@color/purple"
        android:rotation="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/text_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/TextViewTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="56dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_signin">

        <TextView
            android:id="@+id/textusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:theme="@style/TextViewSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_signin" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="300sp"
            android:layout_height="48sp"
            android:layout_weight="1"
            android:hint="@string/insert_usernamelogin"
            android:paddingStart="14dp"
            android:theme="@style/EditTextGrey"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_username">

        <TextView
            android:id="@+id/textpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:theme="@style/TextViewSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_signin" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="300sp"
            android:layout_height="48sp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@color/gray_transparent"
            android:hint="@string/insert_password"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:theme="@style/EditTextGrey"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:theme="@style/TextViewButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        android:backgroundTint="@color/purple"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register_account"
        android:theme="@style/PostButton"
        android:backgroundTint="#100FFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signin" />

</androidx.constraintlayout.widget.ConstraintLayout>